@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.4
 
+	- OSX users couldn't enter some special chars when using
+	  some foreign key layouts (STR #32)
 	- Hiding subwindows on OSX would hide the parent window
           (STR #22)
 	- Added thin plastic box types.
